[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/UI/InGame/AgeSelector.gd" type="Script" id=1]
[ext_resource path="res://Scripts/UI/InGame/AgeButton.gd" type="Script" id=2]
[ext_resource path="res://Fonts/ABeeZee-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="AgeSelector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VFlowContainer" type="HFlowContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -22.5
margin_bottom = 22.5

[node name="GuyAge" type="Button" parent="VFlowContainer"]
unique_name_in_owner = true
margin_right = 326.0
margin_bottom = 45.0
size_flags_horizontal = 3
theme = SubResource( 2 )
text = "Guy age"
script = ExtResource( 2 )
age_scene = "res://Rooms/Ages/GuyAge.tscn"

[node name="IceAge" type="Button" parent="VFlowContainer"]
unique_name_in_owner = true
margin_left = 330.0
margin_right = 639.0
margin_bottom = 45.0
size_flags_horizontal = 3
theme = SubResource( 2 )
text = "Ice age"
script = ExtResource( 2 )
age_scene = "res://Rooms/Ages/IceAge.tscn"
required_chip = 1

[connection signal="pressed" from="VFlowContainer/GuyAge" to="." method="_on_IceAge_pressed"]
[connection signal="pressed" from="VFlowContainer/IceAge" to="." method="_on_IceAge_pressed"]
